<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/donateButton"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.65"
        android:contentDescription="@string/accesibilityLogo"
        android:scaleType="fitStart"
        android:src="@drawable/donate" >
    </ImageButton>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.4"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="30dp"
            android:text="@string/donateWhy"
            android:textSize="25dp" >
        </TextView>

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donate1" >
        </TextView>

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/donate2"
            android:textColor="#ffff00"
            android:textSize="35dp"
            android:typeface="serif" >
        </TextView>
    </LinearLayout>

</LinearLayout>