<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayoutScreen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top"
        android:layout_marginBottom="60dp" >

        <!-- I know that Nested weights are bad for performance, I know -->

        <LinearLayout
            android:id="@+id/linearLayoutBoard"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight=".3"
            android:orientation="vertical" >

            <com.seavenois.tetris.BoardView
                android:id="@+id/GameView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >
            </com.seavenois.tetris.BoardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutInfo"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight=".7"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewNext"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight=".4"
                android:text="@string/next" />

            <ImageView
                android:id="@+id/imageViewNext"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:background="@drawable/nextpiece"
                android:contentDescription="@string/accesibilityNextPiece" />

            <Button
                android:id="@+id/buttonPause"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/pause" />

            <LinearLayout
                android:id="@+id/LinearLayoutScore"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/TextViewScoreLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/green_color"
                    android:text="@string/score" />

                <TextView
                    android:id="@+id/TextViewScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right" />

                <ImageView
                    android:id="@+id/imageViewCombo"
                    android:layout_width="fill_parent"
                    android:layout_height="0dip"
                    android:layout_weight=".1"
                    android:contentDescription="@string/accesibilityCombo"
                    android:src="@drawable/alpha" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom" >

        <!-- I know that Nested weights are bad for performance, I know -->

        <Button
            android:id="@+id/ButtonRotateL"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight=".2"
            android:drawableTop="@drawable/rotateleft" />

        <Button
            android:id="@+id/ButtonMoveL"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight=".2"
            android:drawableTop="@drawable/moveleft" />

        <Button
            android:id="@+id/ButtonMoveD"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight=".2"
            android:drawableTop="@drawable/movedown" />

        <Button
            android:id="@+id/ButtonMoveR"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight=".2"
            android:drawableTop="@drawable/moveright" />

        <Button
            android:id="@+id/buttonRotateR"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight=".2"
            android:drawableTop="@drawable/rotateright" />
    </LinearLayout>

</FrameLayout>